<resources>
    <string name="app_name">FITRUN</string>
    <string name="title_add_run">Ayo bagikan perjalananmu!</string>
    <string name="hint_tanggal">Tanggal</string>
    <string name="hint_waktu">Waktu Lari</string>
    <string name="hint_durasi">Durasi (menit)</string>
    <string name="btn_save">SIMPAN</string>
    <string name="error_empty">Semua field harus diisi!</string>
    <string name="success_save">Run berhasil disimpan</string>

    <string name="formatted_date">%1$d/%2$d/%3$d</string>
    <string name="formatted_time">%1$02d:%2$02d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fitrun">FITRUN</string>
    <string name="email">Email</string>
    <string name="daftar_sekarang">DAFTAR SEKARANG</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="mulai_perjalanan_larimu_hari_ini">Mulai Perjalanan Larimu Hari Ini!</string>
    <string name="password">Password</string>
    <string name="masuk_di_sini">Masuk di sini</string>
</resources>